--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,7 @@ services:
     environment:
       - NODE_ENV=production
       - DIRECTUS_URL=http://directus:8055
+      - DIRECTUS_PUBLIC_URL=http://localhost:8055
       - DIRECTUS_STATIC_TOKEN=${DIRECTUS_STATIC_TOKEN}
     depends_on:
       - directus
